[project]
name = "enterprise-ai-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ddgs>=9.10.0",
    "langchain>=1.2.6",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.7",
    "langchain-groq>=1.1.1",
    "openai>=2.15.0",
    "pandas>=3.0.0",
    "pydantic>=2.12.5",
    "wikipedia>=1.4.0",
]
